@@ -59,6 +59,8 @@ typedef struct {
 #define RS(svar)    c ## svar .s
 #define RLEN(svar)  c ## svar .len
 
+#if GI_LEVEL_NOT_YET_1_8
+
 #define FINANGLABLE_SCHEME_STRING_FROM_SYMBOL(sym)      \
   scm_string_copy (scm_symbol_to_string (sym))
 
@@ -72,6 +74,33 @@ typedef struct {
   while (0)
 
 #define UNFINANGLE(svar)
+
+#else  /* !GI_LEVEL_NOT_YET_1_8 */
+
+#define FINANGLABLE_SCHEME_STRING_FROM_SYMBOL  scm_symbol_to_string
+
+#define REND(svar)          RS (svar) [RLEN (svar)]
+#define NUL_AT_END_X(svar)  REND (svar) = '\0'
+
+#define _FINANGLE(svar,p1)  do                                  \
+    {                                                           \
+      RS (svar) = scm_to_locale_stringn (svar, &RLEN (svar));   \
+      if (RS (svar))                                            \
+        {                                                       \
+          if (p1 && REND (svar))                                \
+            {                                                   \
+              RS (svar) = realloc (RS (svar), 1 + RLEN (svar)); \
+              NUL_AT_END_X (svar);                              \
+            }                                                   \
+        }                                                       \
+      else                                                      \
+        RS (svar) = strdup ("");                                \
+    }                                                           \
+  while (0)
+
+#define UNFINANGLE(svar)  free (RS (svar))
+
+#endif  /* !GI_LEVEL_NOT_YET_1_8 */
 
 /* Use ‘FINANGLE_RAW’ when the consumer of the C string takes full range
    (start address plus length) info.  Otherwise, ‘FINANGLE’.  */
